// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lad-tech/mobydick-core/Chip renders correctly and onPress fired 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "rgba(43, 120, 238, 0.15)",
      "borderRadius": 8,
      "flexDirection": "row",
      "padding": 4,
      "paddingLeft": 8,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#2B78EE",
          "fontFamily": "Inter-Regular",
          "fontSize": 10,
          "lineHeight": 14,
          "minHeight": 14,
        },
        {
          "marginRight": 4,
        },
      ]
    }
  >
    JavaScript
  </Text>
  <View
    accessibilityLabel="JavaScript"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        {
          "color": "#2B78EE",
          "fontFamily": "Neotis",
          "fontSize": 16,
        }
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/Chip renders correctly with maxTextLength 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "rgba(43, 120, 238, 0.15)",
      "borderRadius": 8,
      "flexDirection": "row",
      "padding": 4,
      "paddingLeft": 8,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#2B78EE",
          "fontFamily": "Inter-Regular",
          "fontSize": 10,
          "lineHeight": 14,
          "minHeight": 14,
        },
        {
          "marginRight": 4,
        },
      ]
    }
  >
    Java...
  </Text>
  <View
    accessibilityLabel="JavaScript"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        {
          "color": "#2B78EE",
          "fontFamily": "Neotis",
          "fontSize": 16,
        }
      }
    >
      
    </Text>
  </View>
</View>
`;
